--- a/document.html
+++ b/document.html
@@ -69,8 +69,9 @@
 <b>jc_imageSelector</b> <br>
 Javascript Simple Image Selector<br>
 include Javascript file jc_imageSelector.js and enjoy  
-<br><br>
+<br><br>https://github.com/kangjeki/jc_imageSelector
 <a href="index.html" class="uri">Get Started</a> 
+<a href="https://github.com/kangjeki/jc_imageSelector" class="uri">Download</a> 
 </div>
 
 <br>
