--- a/document.html
+++ b/document.html
@@ -137,7 +137,7 @@ include js File on head
 <br>
 
 <p>
-  or you want to select croper only, you cant replace URL callback with boolean true-false or actived the function;
+  or you want to select croper only, you can replace URL callback with boolean true-false or actived the function;
 </p>
 <code>
 <xmp>
