Edit Box Dialog

--- a/index.html
+++ b/index.html
@@ -87,7 +87,37 @@
 			</div>
 			<div class="col-8">
 				<div id="content">
-					
+					<p>JC Booster Web Component adalah project pribadi JC Programs</p>
+		<div class="clear"></div>
+		<p><b>Struktur Non PHP</b>
+<xmp>
+	Root> 	|-Project
+	Dir> 	|_____|- css
+	Dir> 	|_____|- js
+	Dir> 	|_____|- fonts
+	File> 	|_____|- index.html
+</xmp>
+
+		</p>
+		<div class="clear"></div>
+		<p><b>Struktur Dengan Lib PHP</b>
+<xmp>
+	Root> 	|-Project
+	Dir> 	|_____|- jc_app
+	Dir> 	|_____|_____|- WebPack
+	File> 	|_____|_____|_____|- classes.php
+	File> 	|_____|_____|- init.php
+	File> 	|_____|_____|- map.php
+	Dir> 	|_____|- jc_include
+	Dir> 	|_____|_____|- constructor
+	Dir> 	|_____|_____|- img
+	Dir> 	|_____|_____|- css
+	Dir> 	|_____|_____|- js
+	Dir> 	|_____|_____|- fonts
+	File> 	|_____|- index.php
+</xmp>
+
+		</p>
 				</div>
 			</div>
 			<div class="col-2">
